--- a/css/inicio.css
+++ b/css/inicio.css
@@ -8,7 +8,7 @@
 .contanier{
     width: 100%;
     height: 100vh;
-    padding: 0 15px 15px;
+    padding: 0 0.9375rem 0.9375rem;
 }
 .contanier nav{
     width: 90%;
@@ -58,7 +58,7 @@ nav ul li a{
     font-weight: bold;
     text-transform: uppercase;
     text-decoration: none;
-    font-size: 15px;
+    font-size: 0.9375rem;
     transition: 0.3s;
 }
 nav ul li a:hover,
@@ -77,6 +77,7 @@ nav ul li.active a{
     align-items: center;
     padding: 0 5%;
 }
+
 .content .div-text span{
     color: #fff;
     font-size: 25px;
