--- a/css/inicio.css
+++ b/css/inicio.css
@@ -144,86 +144,6 @@ nav ul li.active a{
 .content .small-img img:hover{
     transform: scale(1.2);
 }
-/* ABOUT */
-.about {
-    padding: 80px 0;
-    background-color: #f9f9f9;
-}
-
-.about-banner {
-    text-align: center;
-    margin-bottom: 40px;
-}
-
-.about-banner img {
-    max-width: 100%;
-    height: auto;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-.about-content {
-    max-width: 800px;
-    margin: auto;
-    text-align: center;
-}
-
-.about-item {
-    margin-bottom: 40px;
-}
-
-.card-title {
-    font-size: 24px;
-    margin-bottom: 15px;
-    color: #333;
-}
-
-.card-text {
-    font-size: 16px;
-    line-height: 1.6;
-    color: #666;
-}
-
-/* Accordion */
-.accordion-card {
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-    transition: box-shadow 0.3s ease;
-}
-
-.accordion-card:hover {
-    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.2);
-}
-
-.accordion-btn {
-    background: none;
-    border: none;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    color: #333;
-    font-weight: bold;
-}
-
-.accordion-btn:focus {
-    outline: none;
-}
-
-.accordion-btn .down {
-    margin-left: auto;
-}
-
-.accordion-content {
-    display: none;
-    margin-top: 20px;
-}
-
-.expanded .accordion-content {
-    display: block;
-}
-
   /* Section Service */
   .section.service {
     background-color: #f8f8f8;
@@ -238,7 +158,7 @@ nav ul li.active a{
   }
   
   .section-title {
-    color: #333;
+    color: rgb(143, 140, 140);
     font-size: 36px;
     font-weight: bold;
     margin-bottom: 40px;
@@ -350,8 +270,17 @@ nav ul li.active a{
   .submit-btn:hover {
     background-color: #ff9aa2;
   }
-.section.service{
+.section.service .container{
+  width: 100%;
+  height: calc(100vh - 95px);
   text-decoration: none;
+  border-radius: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 5%;
+  margin: 55% 0;
+  margin-bottom: 12%;
 }
 .grid-list ul  li a{
   display: flex;
