--- a/css/inicio.css
+++ b/css/inicio.css
@@ -1,322 +1,166 @@
 *{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: sans-serif;
-    text-decoration: none;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: sans-serif;
+  text-decoration: none;
 }
 .contanier{
-    width: 100%;
-    height: 100vh;
-    padding: 0 0.9375rem 0.9375rem;
+  width: 100%;
+  height: 100vh;
+  padding: 0 0.9375rem 0.9375rem;
 }
 .contanier nav{
-    width: 90%;
-    margin: auto;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 80px;
+  width: 90%;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 80px;
 }
 nav .logo{
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 nav .logo i{
-    color: #79bccf;
-    font-size: 28px;
+  color: #79bccf;
+  font-size: 28px;
 }
 nav .logo h1{
-    color: #444;
-    font-size: 28px;
+  color: #444;
+  font-size: 28px;
 }
 
 nav ul li{
-    display: inline-block;
-    margin-left: 50px;
-    height: 80px;
-    position: relative;
-    line-height: 80px;
-    cursor: pointer;
+  display: inline-block;
+  margin-left: 50px;
+  height: 80px;
+  position: relative;
+  line-height: 80px;
+  cursor: pointer;
 }
 nav ul li::after{
-    content: '';
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    background: #79bccf;
-    width: 0%;
-    height: 3px;
-    transition: 0.3s;
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background: #79bccf;
+  width: 0%;
+  height: 3px;
+  transition: 0.3s;
 }
 nav ul li:hover::after,
 nav ul li.active::after{
-    width: 100%;
+  width: 100%;
 }
 nav ul li a{
-    color: #444;
-    font-weight: bold;
-    text-transform: uppercase;
-    text-decoration: none;
-    font-size: 0.9375rem;
-    transition: 0.3s;
+  color: #444;
+  font-weight: bold;
+  text-transform: uppercase;
+  text-decoration: none;
+  font-size: 0.9375rem;
+  transition: 0.3s;
 }
 nav ul li a:hover,
 nav ul li.active a{
-    color: #79bccf;
+  color: #79bccf;
 }
+.contanier nav {
+  position: fixed; /* Adicionando posição fixa */
+  top: 0; /* Fixando a barra no topo */
+  width: 100%;
+  background-color: #fff; /* Adicionando um fundo branco para a barra */
+  z-index: 1000; /* Definindo um índice z alto para garantir que a barra esteja sempre acima de outros elementos */
+}
+
+.contanier .content {
+  padding-top: 80px; /* Ajustando o padding superior para compensar a altura da barra de navegação fixa */
+}
+
 
 
 .contanier .content{
-    width: 100%;
-    height: calc(100vh - 95px);
-    background: linear-gradient(130deg, #c4e1f8, #eeb0bd);
-    border-radius: 10px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 5%;
-}
-
-.content .div-text span{
-    color: #fff;
-    font-size: 25px;
-    text-transform: uppercase;
-    letter-spacing: 1.8px;
-    font-weight: bold;
-}
-.content .div-text h3{
-    text-transform: uppercase;
-    letter-spacing: 1.8px;
-    font-size: 50px;
-    font-weight: normal;
-    margin: 20px 0 8px;
-    color: #444;
-}
-.content .div-text h1{
-    font-size: 55px;
-    font-weight: bold;
-    text-transform: uppercase;
-    letter-spacing: 1.8px;
-    color: #444;
-    margin-bottom: 25px;
-}
-.content .div-text p{
-    color: #666;
-    font-size: 14px;
-    line-height: 1.8;
-    letter-spacing: 1.3px;
-    margin-bottom: 55px;
-}
-.content .div-text .btn{
-    padding: 15px 35px;
-    background-color: #fff;
-    color: #79bccf;
-    text-transform: uppercase;
-    font-weight: bold;
-    text-decoration: none;
-    border-radius: 30px;
-    transition: 0.3s;
-}
-.content .div-text .btn:hover{
-    color: #fff;
-    background-color: #79bccf;
-}
-
-
-
-.content .div-img img{
-    width: 350px;
-}
-.content .small-img{
-    position: absolute;
-    left: 50%;
-    bottom: 20px;
-    transform: translateX(-50%);
-    display: flex;
-    gap: 80px;
-}
-.content .small-img img{
-    width: 80px;
-    cursor: pointer;
-    transition: 0.4s;
-}
-.content .small-img img:hover{
-    transform: scale(1.2);
-}
-  /* Section Service */
-  .section.service {
-    background-color: #f8f8f8;
-    padding: 80px 0;
-  }
-  
-  .section-subtitle {
-    color: #333;
-    font-size: 18px;
-    font-weight: bold;
-    margin-bottom: 20px;
-  }
-  
-  .section-title {
-    color: rgb(143, 140, 140);
-    font-size: 36px;
-    font-weight: bold;
-    margin-bottom: 40px;
-  }
-  
-  .service-card {
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-    margin: 20px;
-    padding: 30px;
-    text-align: center;
-  }
-  
-  .card-icon {
-    color: #ffb6c1;
-    font-size: 36px;
-    margin-bottom: 20px;
-  }
-  
-  .card-title {
-    color: #333;
-    font-size: 24px;
-    font-weight: bold;
-    margin-bottom: 10px;
-  }
-  
-  .card-text {
-    color: #666;
-    font-size: 16px;
-    margin-bottom: 20px;
-  }
-  
-  .btn-text {
-    background-color: #ffb6c1;
-    border-radius: 5px;
-    color: #fff;
-    display: inline-block;
-    padding: 10px 20px;
-    text-decoration: none;
-    transition: background-color 0.3s ease;
-  }
-  
-  .btn-text:hover {
-    background-color: #ff9aa2;
-  }
-  
-  /* Section About */
-  .about {
-    padding: 100px 0;
-  }
-  
-  .about-banner {
-    margin-bottom: 50px;
-  }
-  
-  .about-content {
-    text-align: center;
-  }
-  
-  .about-content ul li a{
-    text-decoration: none;
-    
-  }
-  .about-item {
-    margin-bottom: 40px;
-  }
-  
-  .accordion-content {
-    display: none;
-  }
-  
-  .accordion-btn {
-    background-color: #ffb6c1;
-    border: none;
-    border-radius: 5px;
-    color: #fff;
-    cursor: pointer;
-    padding: 10px 20px;
-    transition: background-color 0.3s ease;
-  }
-  
-  .accordion-btn:hover {
-    background-color: #ff9aa2;
-  }
-  
-  .input-wrapper {
-    display: flex;
-    margin-bottom: 20px;
-  }
-  
-  .input-field {
-    border: none;
-    border-radius: 5px;
-    padding: 10px;
-    width: 70%;
-  }
-  
-  .submit-btn {
-    background-color: #ffb6c1;
-    border: none;
-    border-radius: 5px;
-    color: #fff;
-    cursor: pointer;
-    padding: 10px 20px;
-    transition: background-color 0.3s ease;
-  }
-  
-  .submit-btn:hover {
-    background-color: #ff9aa2;
-  }
-.section.service .container{
   width: 100%;
   height: calc(100vh - 95px);
-  text-decoration: none;
+  background: linear-gradient(130deg, #c4e1f8, #eeb0bd);
   border-radius: 10px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0 5%;
-  margin: 55% 0;
-  margin-bottom: 12%;
-}
-.grid-list ul  li a{
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  text-decoration: none;
-  text-align: justify;
 }
 
-.h2section-title {
-  text-align: center;
-  font-weight: bold;
+.content .div-text span{
+  color: #fff;
   font-size: 25px;
-  color:  #ff9aa2;
-  margin-top: 25px;
-  
-}
-.section-subtitle{
-  text-align: center;
+  text-transform: uppercase;
+  letter-spacing: 1.8px;
   font-weight: bold;
-  font-size: 35px;
-  color:  #37a4e2;
-  margin-top: 25px;
-
+}
+.content .div-text h3{
+  text-transform: uppercase;
+  letter-spacing: 1.8px;
+  font-size: 50px;
+  font-weight: normal;
+  margin: 20px 0 8px;
+  color: #444;
+}
+.content .div-text h1{
+  font-size: 55px;
+  font-weight: bold;
+  text-transform: uppercase;
+  letter-spacing: 1.8px;
+  color: #444;
+  margin-bottom: 25px;
+}
+.content .div-text p{
+  color: #666;
+  font-size: 14px;
+  line-height: 1.8;
+  letter-spacing: 1.3px;
+  margin-bottom: 55px;
+}
+.content .div-text .btn{
+  padding: 15px 35px;
+  background-color: #fff;
+  color: #79bccf;
+  text-transform: uppercase;
+  font-weight: bold;
+  text-decoration: none;
+  border-radius: 30px;
+  transition: 0.3s;
+}
+.content .div-text .btn:hover{
+  color: #fff;
+  background-color: #79bccf;
 }
 
 
-.sectionservice, .container {
-  background-color: rgba(65, 168, 236, 0.116);
-  border-radius: 10px;
-  width: 100%;
-}
 
-.sectionservice {
+.content .div-img img{
+  width: 350px;
+}
+.content .small-img{
+  position: absolute;
+  left: 50%;
+  bottom: 20px;
+  transform: translateX(-50%);
+  display: flex;
+  gap: 80px;
+}
+.content .small-img img{
+  width: 80px;
+  cursor: pointer;
+  transition: 0.4s;
+}
+.content .small-img img:hover{
+  transform: scale(1.2);
+}
+/* Section Service */
+.section.service {
   background-color: #f8f8f8;
   padding: 80px 0;
+  margin-top: 5%;
 }
 
 .section-subtitle {
@@ -326,7 +170,7 @@ nav ul li.active a{
   margin-bottom: 20px;
 }
 
-.h2section-title {
+.section-title {
   color: rgb(143, 140, 140);
   font-size: 36px;
   font-weight: bold;
@@ -374,3 +218,85 @@ nav ul li.active a{
 .btn-text:hover {
   background-color: #ff9aa2;
 }
+.accordion-content {
+  display: none;
+}
+
+.accordion-btn {
+  background-color: #ffb6c1;
+  border: none;
+  border-radius: 5px;
+  color: #fff;
+  cursor: pointer;
+  padding: 10px 20px;
+  transition: background-color 0.3s ease;
+}
+
+.accordion-btn:hover {
+  background-color: #ff9aa2;
+}
+
+.input-wrapper {
+  display: flex;
+  margin-bottom: 20px;
+}
+
+.input-field {
+  border: none;
+  border-radius: 5px;
+  padding: 10px;
+  width: 70%;
+}
+
+.submit-btn {
+  background-color: #ffb6c1;
+  border: none;
+  border-radius: 5px;
+  color: #fff;
+  cursor: pointer;
+  padding: 10px 20px;
+  transition: background-color 0.3s ease;
+}
+
+.submit-btn:hover {
+  background-color: #ff9aa2;
+}
+.section.service .container{
+width: 100%;
+height: calc(100vh - 95px);
+text-decoration: none;
+border-radius: 10px;
+display: flex;
+justify-content: space-between;
+align-items: center;
+padding: 0 5%;
+margin: 35% ;
+border: 10px;
+margin-top: 45%;
+}
+.grid-list ul  li a{
+display: flex;
+flex-wrap: wrap;
+justify-content: center;
+text-decoration: none;
+text-align: justify;
+}
+
+.h2section-title {
+text-align: center;
+font-weight: bold;
+font-size: 25px;
+color:  #ff9aa2;
+margin-top: 25px;
+
+}
+.section-subtitle{
+text-align: center;
+margin-bottom: 20px;
+font-weight: bold;
+font-size: 35px;
+color:  #37a4e2;
+
+}
+
+
