--- a/css/inicio.css
+++ b/css/inicio.css
@@ -281,6 +281,7 @@ display: flex;
 flex-wrap: wrap;
 justify-content: center;
 text-decoration: none;
+list-style-type: none;
 text-align: justify;
 }
 
