--- a/css/inicio.css
+++ b/css/inicio.css
@@ -5,11 +5,13 @@
   font-family: sans-serif;
   text-decoration: none;
 }
+
 .contanier{
   width: 100%;
   height: 100vh;
   padding: 0 0.9375rem 0.9375rem;
 }
+
 .contanier nav{
   width: 90%;
   margin: auto;
@@ -22,10 +24,12 @@ nav .logo{
   display: flex;
   align-items: center;
 }
+
 nav .logo i{
   color: #79bccf;
   font-size: 28px;
 }
+
 nav .logo h1{
   color: #444;
   font-size: 28px;
@@ -49,10 +53,12 @@ nav ul li::after{
   height: 3px;
   transition: 0.3s;
 }
+
 nav ul li:hover::after,
 nav ul li.active::after{
   width: 100%;
 }
+
 nav ul li a{
   color: #444;
   font-weight: bold;
@@ -61,15 +67,17 @@ nav ul li a{
   font-size: 0.9375rem;
   transition: 0.3s;
 }
+
 nav ul li a:hover,
 nav ul li.active a{
   color: #79bccf;
 }
+
 .contanier nav {
   position: fixed; /* Adicionando posição fixa */
   top: 0; /* Fixando a barra no topo */
   width: 100%;
-  background-color: #ffffff9a; /* Adicionando um fundo branco para a barra */
+  background-color: #ffffff9a; /* Adicionando um fundo cinza para a barra */
   z-index: 1000; /* Definindo um índice z alto para garantir que a barra esteja sempre acima de outros elementos */
 }
 
@@ -77,41 +85,41 @@ nav ul li.active a{
   padding-top: 80px; /* Ajustando o padding superior para compensar a altura da barra de navegação fixa */
 }
 
-
-
 .contanier .content{
   width: 100%;
-  height: calc(100vh - 95px);
+  height: calc(100vh - 5.9375rem);
   background: linear-gradient(130deg, #c4e1f8, #eeb0bd);
   border-radius: 10px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 5%;
+  padding: 0% 5%;
 }
 
 .content .div-text span{
   color: #fff;
-  font-size: 25px;
+  font-size: 1.5625rem;
   text-transform: uppercase;
   letter-spacing: 1.8px;
   font-weight: bold;
 }
+
 .content .div-text h3{
   text-transform: uppercase;
   letter-spacing: 1.8px;
-  font-size: 50px;
+  font-size: 3.125rem;
   font-weight: normal;
-  margin: 20px 0 8px;
+  margin: 1.25rem 0 .5rem;
   color: #444;
 }
+
 .content .div-text h1{
-  font-size: 55px;
+  font-size: 3.4375rem;
   font-weight: bold;
   text-transform: uppercase;
   letter-spacing: 1.8px;
   color: #444;
-  margin-bottom: 25px;
+  margin-bottom: 1.5625rem;
 }
 .content .div-text p{
   color: #666;
@@ -277,12 +285,12 @@ margin-top: 45%;
 }
 
 .grid-list ul  li a{
-display: flex;
-flex-wrap: wrap;
-justify-content: center;
-text-decoration: none;
-list-style-type: none;
-text-align: justify;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  text-decoration: none;
+  list-style-type: none;
+  text-align: justify;
 }
 
 .h2section-title {
