--- a/css/inicio.css
+++ b/css/inicio.css
@@ -311,12 +311,13 @@ margin-top: 45%;
 
 @media screen and (max-width: 991px) {
   img#big-img{
-    max-width: 50%;
-    display: flex;
-    flex-wrap: wrap;
+    max-width: 0%;
   }
 
-  
+  .small-img > img{
+    max-width: 0%;
+  }
+
 }
 
 
