--- a/css/style.css
+++ b/css/style.css
@@ -420,7 +420,7 @@ nav .wrapper {
     transform: translateX(-50%);
     border: none;
     border-bottom: 1px solid rgb(0, 0, 0);
-    font-family: Poppins;
+    font-family: 'Poppins' , sans-serif;
     font-weight: bold;
     letter-spacing: 3px;
     background-color: transparent;
@@ -439,8 +439,8 @@ nav .wrapper {
     pointer-events: none;
 }
 .carousel::before{
-    width: 500px;
-    height: 300px;
+    width: 31.25rem;
+    height: 18.75rem;
     content: '';
     background-image: linear-gradient(70deg, #DC422A, blue);
     position: absolute;
