--- a/css/inicio.css
+++ b/css/inicio.css
@@ -3,16 +3,13 @@
   margin: 0;
   box-sizing: border-box;
   font-family: sans-serif;
-  text-decoration: none;
 }
-
-.contanier{
+.container {
   width: 100%;
-  height: 100vh;
-  padding: 0 0.9375rem 0.9375rem;
+  height: auto; /* Alterando para altura automática */
+  padding: 0 0.9375rem; /* Mantendo o preenchimento lateral */
 }
-
-.contanier nav{
+.container nav {
   width: 90%;
   margin: auto;
   display: flex;
@@ -20,6 +17,7 @@
   align-items: center;
   height: 80px;
 }
+
 nav .logo{
   display: flex;
   align-items: center;
@@ -82,7 +80,7 @@ nav ul li.active a{
 }
 
 .contanier .content {
-  padding-top: 80px; /* Ajustando o padding superior para compensar a altura da barra de navegação fixa */
+  margin-top: -40px;
 }
 
 .contanier .content{
@@ -163,43 +161,210 @@ nav ul li.active a{
 .content .small-img img:hover{
   transform: scale(1.2);
 }
-/* Section Service */
-.sectionservice {
-  background-color: #f8f8f8;
-  text-decoration: none;
-  list-style-type: none;
-  padding: 80px 0;
-  margin-top: 5%;
+/* about */
+.about {
+  margin-top: 0;
+  margin-bottom: -40px;
+  padding: 60px 5% 0;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
 }
 
+.about-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.about-text {
+  width: 50%;
+  padding-right: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+
+.about-image {
+  width: 35%;
+  height: 15%; /* Define a largura da imagem */
+  display: flex;
+  justify-content: right;
+  align-items: center;
+  padding-left: 20px;
+
+   /* Centraliza a imagem horizontalmente */
+}
+
+.about-image img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 5px;
+  border-radius: 20px;
+  margin: 10px;
+  border: 2px;
+  box-shadow: 0 0 10px rgb(2, 196, 255);
+}
+
+/* Remova as regras abaixo se não estiverem sendo usadas */
+.about .div-img,
+.about .small-img {
+  position: absolute;
+  bottom: 7.375rem;
+}
+
+.about .small-img {
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.about .div-text {
+  margin-bottom:  8.375rem;
+  z-index: 1;
+}
+
+.about .div-text span {
+  font-size: 1.5625rem;
+  text-transform: uppercase;
+  letter-spacing: 1.8px;
+  font-weight: bold;
+}
+
+.about .div-text h3 {
+  text-transform: uppercase;
+  letter-spacing: 1.8px;
+  font-size: 3.125rem;
+  font-weight: normal;
+  margin: 1.25rem 0 .5rem;
+  color: #444;
+}
+
+.about .div-text h1 {
+  font-size: 3.4375rem;
+  font-weight: bold;
+  text-transform: uppercase;
+  letter-spacing: 1.8px;
+  color: #444;
+  margin-bottom: 1rem;
+
+}
+
+.about .div-text p {
+  font-size: 14px;
+  line-height: 1.8;
+  letter-spacing: 1.3px;
+  margin-bottom: 55px;
+}
+
+.about .div-text .btn {
+  padding: 15px 35px;
+  background-color: #fff;
+  color: #79bccf;
+  text-transform: uppercase;
+  font-weight: bold;
+  text-decoration: none;
+  border-radius: 30px;
+  transition: 0.3s;
+}
+
+.about .div-text .btn:hover {
+  color: #fff;
+  background-color: #79bccf;
+}
+
+.about .div-img img {
+  width: 15rem;
+}
+
+.about .small-img {
+  position: absolute;
+  left: 50%;
+  bottom: 7.375rem;
+  transform: translateX(-50%);
+  display: flex;
+  gap: 4.375rem;
+}
+
+.about .small-img img {
+  width: 6.25rem;
+  cursor: pointer;
+  transition: 0.4s;
+}
+
+.about .small-img img:hover {
+  transform: scale(1.2);
+}
+/* Section Service */
 .grid-list > li {
   list-style: none;
 }
 
 .section-subtitle {
-  color: #333;
-  font-size: 18px;
+  color: #eeb0bd;
+  font-size: 45px;
   font-weight: bold;
   margin-bottom: 20px;
+  text-align: center;
+  margin-top: 80px;
 }
 
-.section-title {
-  color: rgb(143, 140, 140);
+.h2section-title {
+  color:  #79bccf;
   font-size: 36px;
   font-weight: bold;
-  margin-bottom: 40px;
+  margin-bottom: -2px;
+  text-align: center;
+
 }
 
-.service-card {
+.sectionservice .service-card {
   background-color: #fff;
   border-radius: 10px;
-  box-shadow: 0 0 1.25rem rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 20px #ffb6c1;
   margin: 1.25rem;
   padding: 1.875rem;
   list-style: none;
   text-align: center;
+
 }
 
+.sectionservice .card-icon {
+  color: #ffb6c1;
+  font-size: 3rem;
+  margin-bottom: 20px;
+}
+
+.sectionservice .card-title {
+  color: #333;
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.sectionservice .card-text {
+  color: #666;
+  font-size: 1rem;
+  margin-bottom: 20px;
+}
+
+.sectionservice .btn-text {
+  background-color: #ffb6c1;
+  border-radius: 5px;
+  color: #fff;
+  display: inline-block;
+  padding: 10px 20px;
+  text-decoration: none;
+  transition: background-color 0.3s ease;
+}
+
+.sectionservice .btn-text:hover {
+  background-color: #ff9aa2;
+}
 .card-icon {
   color: #ffb6c1;
   font-size: 36px;
@@ -232,88 +397,55 @@ nav ul li.active a{
 .btn-text:hover {
   background-color: #ff9aa2;
 }
-.accordion-content {
-  display: none;
+
+.contact {
+  background-color: #fff;
+  padding: 50px 0;
 }
 
-.accordion-btn {
-  background-color: #ffb6c1;
-  border: none;
-  border-radius: 5px;
-  color: #fff;
-  cursor: pointer;
-  padding: 10px 20px;
-  transition: background-color 0.3s ease;
+.section-title {
+  text-align: center;
+  margin-bottom: 40px;
+  color: #ff9aa2;
 }
 
-.accordion-btn:hover {
-  background-color: #ff9aa2;
-}
-
-.input-wrapper {
+.contact-info {
   display: flex;
-  margin-bottom: 20px;
-}
-
-.input-field {
-  border: none;
-  border-radius: 5px;
-  padding: 10px;
-  width: 70%;
-}
-
-.submit-btn {
-  background-color: #ffb6c1;
-  border: none;
-  border-radius: 5px;
-  color: #fff;
-  cursor: pointer;
-  padding: 10px 20px;
-  transition: background-color 0.3s ease;
-}
-
-.submit-btn:hover {
-  background-color: #ff9aa2;
-}
-.section.service .container{
-width: 100%;
-height: calc(100vh - 95px);
-text-decoration: none;
-border-radius: 10px;
-display: flex;
-justify-content: space-between;
-align-items: center;
-padding: 0 5%;
-margin: 35% ;
-border: 10px;
-margin-top: 45%;
-}
-
-.grid-list ul  li a{
-  display: flex;
-  flex-wrap: wrap;
   justify-content: center;
-  text-decoration: none;
-  list-style-type: none;
-  text-align: justify;
+  align-items: center;
 }
 
-.h2section-title {
+.contact-item {
+  margin: 0 20px;
   text-align: center;
-  font-weight: bold;
-  font-size: 25px;
-  color:  #ff9aa2;
-  margin-top: 25px;
 }
 
-.section-subtitle{
+.contact-item i {
+  font-size: 24px;
+  margin-bottom: 10px;
+  color:  #79bccf;
+}
+
+.contact-item p {
+  font-size: 16px;
+  color: rgb(0, 0, 0);
+}
+footer {
+  background: linear-gradient(130deg, #c4e1f8, #eeb0bd);
+  padding: 20px 0;
   text-align: center;
-  margin-bottom: 20px;
+  color: rgb(153, 1, 255);
+  font-size: 14px;
   font-weight: bold;
-  font-size: 35px;
-  color:  #37a4e2;
+  margin-top: 20px;
 }
 
+/* responsividade */
+@media screen and (max-width: 768px) {
+  .content > .div-text > h3 {
+    margin-top: 20%;
+  }
+}
 /* exclusão das imagens para mobile */
 @media screen and (max-width: 991px) {
   img#big-img{
@@ -327,8 +459,7 @@ margin-top: 45%;
   .content > .div-text > h3 {
     margin-top: 25%;
   }
-
-
 }
+
 
 
