--- a/css/inicio2.css
+++ b/css/inicio2.css
@@ -495,6 +495,10 @@
   
   /* responsividade */
   @media screen and (max-width: 768px) {
+    .content > .div-text > span {
+      margin-top: 20%;
+    }
+
     .content > .div-text > h3 {
       margin-top: 20%;
     }
